# dct

./: LICENSE  README.md  main.py  pyproject.toml
benchmark/: runtime.py
dct/: __init__.py  dct.py
